test/interaction/Issue5695.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Nat → Nat ?1 : Bool → Bool" nil)
((last . 1) . (agda2-goals-action '(0 1)))
(agda2-info-action "*Error*" "Issue5695.agda:12.9-18: error: [GenericDocError] (a : Nat) → Nat when checking that the expression unquote printType has type Nat → Nat" nil)
((last . 3) . (agda2-maybe-goto '("Issue5695.agda" . 298)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-info-action "*Error*" "Issue5695.agda:15.9-18: error: [GenericDocError] (a : Bool) → Bool when checking that the expression unquote printType has type Bool → Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue5695.agda" . 350)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
